smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/no-newline-after-control.smithy
// Syntax error at line 2, column 17: Expected a line break, but found DOLLAR('$') | Model
$version: "2.0" $xyz: "100"
